# hairgpt

./: .dockerignore  .gitignore  Dockerfile  HairGPT_Implementation_Plan.md  README.md  deploy.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  guardrails.py  kiosk.py  llm.py  main.py  orchestrator.py  prompts.py  recommendations.py  retrieval.py  session_logger.py  throttle.py
backend/app/clients/: secret_manager.py  shopify.py
backend/scripts/: demo_ui.py  ingest.py  init_db.py  mint_storefront_token.py  smoke.py
backend/static/: moxiebuddy-widget.js
data/: Hair type and product recommendations - Sheet1.csv  brand_guidelines.md  cx_handbook.py  cx_handbook_chunks.json  hair_type_sheet.py  product_catalog.json  products_csv.py  products_export.csv  refinements.txt  video_chunks.json  videos.py
design/: design.md
docs/: classifier_cost_benefit.html  message_flow.html
hairgpt/: package-lock.json  package.json  shopify.app.toml
infra/schemas/: postgres.sql
scripts/: mint_admin_token.sh
shopify-widget/: INSTALL.html  moxiebuddy-widget.backup.js  moxiebuddy-widget.design-locked.js  moxiebuddy-widget.js  preview.html  theme-snippet-production.liquid
