[project]
name = "hairgpt-backend"
version = "0.0.1"
description = "HairGPT backend — Moxie Beauty"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "google-genai>=0.6",
    "google-cloud-secret-manager>=2.20",
    "cloud-sql-python-connector[asyncpg]>=1.13",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "streamlit>=1.40",
]

[tool.uv]
package = false
